(library
 (name ppx_deriving_router_cohttp_lwt)
 (public_name ppx_deriving_router.cohttp_lwt)
 (enabled_if (and %{lib-available:cohttp-lwt} %{lib-available:ppx_deriving_router.cohttp_lwt_runtime}))
 (libraries ppx_deriving_router)
 (ppx_runtime_libraries ppx_deriving_router.cohttp_lwt_runtime)
 (kind ppx_deriver))
