(library
 (name ppx_deriving_router_runtime_cohttp_lwt_runtime)
 (public_name ppx_deriving_router.cohttp_lwt_runtime)
 (enabled_if %{lib-available:cohttp-lwt})
 (wrapped false)
 (libraries
  http
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  ppx_deriving_router.runtime_lib
  melange-json-native.ppx-runtime))
